tests/health/gold/sdk/tests__named2-test-force.toit.gold
tests/named2-test-force.toit:18:10: error: Argument mismatch for 'B.x'
No argument named '--val'
    this.x --val=499
         ^
